a few fixes
remove warnings
getTargetProfit(targetRate, inPrice)
getSwitchResetLog
getSSTradeSumLogFile
getSSTradeDetailsLogDir0